# team_ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: team.deep.yaml  team.default.yaml  team.quick.yaml
docs/: DecisionLog.md  EventContract.md  IA.md  Personas.md  Plan.md  Process.md  ProjectContext.md  Research.md  ReviewChecklist.md  UserScenarios.md  WorkLog.md
src/hwabaek/: __init__.py  agent.py  bus.py  config.py  consensus.py  contracts.py  run.py  serve.py  session.py
src/hwabaek/dashboard/: app.js  index.html  styles.css
src/hwabaek/llm/: __init__.py  base.py  chatgpt_auth.py  openai_client.py
src/hwabaek/server/: __init__.py  api.py  app.py  events.py
src/hwabaek/store/: __init__.py  base.py  sqlite.py
tests/: test_agent.py  test_bus.py  test_chatgpt_auth.py  test_config.py  test_contracts.py  test_dashboard.py  test_llm_fake.py  test_persistence_integration.py  test_run.py  test_server_api.py  test_server_sse.py  test_session_integration.py  test_store_contract.py  test_store_sqlite.py
