# hwabaek 패키지 정의 — src 레이아웃, 편집 설치(pip install -e .)로 사용
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hwabaek"
version = "0.1.0"
description = "Multi-agent orchestration via autonomous message passing and consensus"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "openai>=2.45",
]

[tool.setuptools.packages.find]
where = ["src"]
