# hwabaek 패키지 정의 — src 레이아웃, 편집 설치(pip install -e .)로 사용
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hwabaek"
version = "0.1.0"
description = "Multi-agent orchestration via autonomous message passing and consensus"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "openai>=2.45",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    # httpx는 서버 인프로세스 테스트(fastapi TestClient)와 SSE 스트림 검증에 쓴다.
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hwabaek = ["dashboard/*.html", "dashboard/*.css", "dashboard/*.js"]
